force-app/main/default/objects/Privacy_Email__c/Privacy_Email__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Privacy_Email_Compact_Layout</compactLayoutAssignment>
    <description
  >Captures Email Addresses associated with completed &quot;Do Not Sell&quot; Privacy Requests. 

On creation of a new contact, a flow will check if the contact&apos;s email matches a Do Not Sell Privacy Email Address, and if so, mark the new contact as a Do Not Sell contact.</description>
    <label>Privacy Email</label>
    <nameField>
        <label>Privacy Email Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Privacy Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>