force-app/main/default/objects/Privacy_Email__c/fields/Most_Recent_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Date_Received__c</fullName>
    <inlineHelpText
  >Captures the most recent &quot;Date Received&quot; on the Privacy Request that created or updated this record.</inlineHelpText>
    <label>Most Recent Date Received</label>
    <type>Date</type>
</CustomField>