force-app/main/default/objects/Privacy_Email__c/fields/Most_Recent_Privacy_Request__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Privacy_Request__c</fullName>
    <inlineHelpText
  >Captures the most recent Privacy Request Number of the Privacy Request that created or updated this record.</inlineHelpText>
    <label>Most Recent Privacy Request</label>
    <length>100</length>
    <type>Text</type>
</CustomField>