force-app/main/default/objects/Privacy_Email__c/fields/Privacy_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Email_Address__c</fullName>
    <label>Privacy Email Address</label>
    <type>Email</type>
</CustomField>