force-app/main/default/objects/Privacy_Email__c/fields/Privacy_Type__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Type__c</fullName>
    <defaultValue>&quot;Do Not Sell&quot;</defaultValue>
    <label>Privacy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>